--- a/src/lib/utils/nodemailer/change-password.html
+++ b/src/lib/utils/nodemailer/change-password.html
@@ -4,7 +4,7 @@
 <head>
   <style>
     body {
-      height: 100vh;
+      height: 100dvh;
       margin: 0;
       padding: 0;
       box-sizing: border-box;
